// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AppHeader > renders default (home) — no back, no right slot 1`] = `
<header
  class="sticky top-0 z-20 border-b border-border bg-background/95 backdrop-blur supports-[backdrop-filter]:bg-background/60"
>
  <div
    class="container mx-auto flex items-center justify-between px-4 py-4"
  >
    <div
      class="flex items-center gap-3 shrink-0"
    >
      <div
        class="text-primary shrink-0"
        data-size="40"
        data-testid="ember-logo"
      />
      <div
        class="hidden sm:block"
      >
        <h1
          class="font-[family-name:var(--font-marcellus)] text-2xl font-bold text-foreground leading-tight"
        >
          EmberTales
        </h1>
        <p
          class="text-sm text-muted-foreground"
        >
          Stories, read together
        </p>
      </div>
    </div>
  </div>
</header>
`;

exports[`AppHeader > renders with back arrow and right slot 1`] = `
<header
  class="sticky top-0 z-20 border-b border-border bg-background/95 backdrop-blur supports-[backdrop-filter]:bg-background/60"
>
  <div
    class="container mx-auto flex items-center justify-between px-4 py-4"
  >
    <div
      class="flex items-center gap-3 shrink-0"
    >
      <button
        aria-label="Back"
        class="h-9 w-9 rounded-lg bg-muted flex items-center justify-center text-muted-foreground hover:text-foreground transition-colors cursor-pointer"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-arrow-left w-4 h-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m12 19-7-7 7-7"
          />
          <path
            d="M19 12H5"
          />
        </svg>
      </button>
      <div
        class="text-primary shrink-0"
        data-size="40"
        data-testid="ember-logo"
      />
      <div
        class="hidden sm:block"
      >
        <h1
          class="font-[family-name:var(--font-marcellus)] text-2xl font-bold text-foreground leading-tight"
        >
          EmberTales
        </h1>
        <p
          class="text-sm text-muted-foreground"
        >
          Stories, read together
        </p>
      </div>
    </div>
    <div
      class="flex items-center gap-2 shrink-0"
    >
      <div
        data-testid="avatar"
      />
    </div>
  </div>
</header>
`;

exports[`AppHeader > renders with custom subtitle 1`] = `
<header
  class="sticky top-0 z-20 border-b border-border bg-background/95 backdrop-blur supports-[backdrop-filter]:bg-background/60"
>
  <div
    class="container mx-auto flex items-center justify-between px-4 py-4"
  >
    <div
      class="flex items-center gap-3 shrink-0"
    >
      <div
        class="text-primary shrink-0"
        data-size="40"
        data-testid="ember-logo"
      />
      <div
        class="hidden sm:block"
      >
        <h1
          class="font-[family-name:var(--font-marcellus)] text-2xl font-bold text-foreground leading-tight"
        >
          EmberTales
        </h1>
        <p
          class="text-sm text-muted-foreground"
        >
          Enchanted Forest Style Guide
        </p>
      </div>
    </div>
  </div>
</header>
`;
